# geojson2geotiff

./: .gitignore  CMakeLists.txt
src/: cli.c  cli.h  geojson.c  geojson.h
worldclim-data/: variables.txt
